--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -5,18 +5,22 @@
     <head>
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
+        {% block script %}
+            <script src="{% static 'network/layout.js' %}"></script>
+        {% endblock %}
     </head>
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Network</a>
+            <a class="navbar-brand all_post" href="{% url 'index' %}">Network</a>
           
             <div>
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                        <a class="nav-link" href="{% url 'profile' user.id %}" ><strong>{{ user.username }}</strong></a>
                     </li>
                 {% endif %}
                 <li class="nav-item">
@@ -42,8 +46,50 @@
           </nav>
         
         <div class="body">
-            {% block body %}
-            {% endblock %}
+            <div class="container">
+                <h1>
+                    {% block heading %}
+                        All Posts
+                    {% endblock %}
+                </h1>
+                {% block dashboard %}
+                {% endblock %}
+
+                {% for post in posts %}
+                    <div class="container border">
+                        <div class="row">
+                            <div class="col">
+                                <h4><a href="{% url 'profile' post.writer.id %}">{{post.writer.username}}</a></h4>
+                            </div>
+                            {% if user == post.writer %}
+                            <div class="col d-flex justify-content-end align-items-center">
+                                <a href="#" id="edit" data-post_id="{{ post.id }}">Edit</a>
+                            </div>
+                            {% endif %}
+                        </div>
+                        <p class="text-muted">{{ post.creation_time }}</p>
+                        <div class="lead">
+                            <p>{{ post.content }}</p>
+                        </div>
+                        <div>
+                            <i class="h4 bi 
+                                {% if user in post.liked_users %}
+                                    bi-star-fill
+                                {% else %}
+                                    bi-star
+                                {% endif %}
+                            " id="like" target="like"></i>
+                            {% if post.liked_users.count %}
+                                <span>{{ post.liked_users.count }}</span>
+                            {% endif %}
+                        </div>
+                        
+                    </div>
+                {% endfor %}
+                
+                {% block body %}
+                {% endblock %}
+            </div>
         </div>
     </body>
 </html>
