--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block script %}
-    <script src="{% static 'network/profile.js' %}"></script>
+
 {% endblock %}
 
 {% block heading %}
@@ -10,37 +10,112 @@
 {% endblock %}
 
 {% block dashboard %}
-<div class="container-fluid border">
-    <div class="row">
-        <div class="col-10">
-            <h2>{{ base_user.username }}</h2>
-            <i class="pl-4">{{ base_user.email }}</i>
-        </div>
-        {% if user != base_user %}
-            <div class="col-2 d-flex align-items-center justify-content-center">
-                <button class="btn
-                {% if user in base_user.followings %}
-                    btn-outline-primary">Unfollow
-                {% else %}
-                    btn-primary">Follow
-                {% endif %}
-                </button>
-            </div>
-        {% endif %}
+<div class="container-fluid border" id="dashboard"></div>
+    <script type="text/babel">
+
+        function Dashboard() {
+
+            const initialState = {
+                followersCount: "{{ base_user.followers.count }}"
+            }
+
+            const userLoggedIn = "{{ user.id }}" === "{{ base_user.id }}";
+
+
+            if (!userLoggedIn){
+                const initialFollowed = "{% if user in base_user.followers.all %}true{% else %}false{% endif %}";
+                console.log(initialFollowed);
+
+                initialState.btnText = initialFollowed === 'true' ? 'Unfollow' : 'Follow',
+                initialState['btnClass'] = initialFollowed === 'true' ? '-outline' : ''
+            }
+            console.log(initialState);
+
+            const [state, setState] = React.useState(initialState);
+
+            async function follow() {
+
+                await fetch("{% url 'follow' base_user.id %}", {
+                            method: "PUT"
+                        });
+
+                const reponse = await fetch("{% url 'get_follower' base_user.id %}");
+                const data = await reponse.json();
+
+                console.log(data.follower_count);
+
+                setState(prevState => ({
+                        ...prevState,
+                        followersCount: data.follower_count,
+                        btnText: prevState.btnText === 'Follow' ? 'Unfollow' : 'Follow',
+                        btnClass: prevState.btnText === 'Follow' ? '-outline' : ''
+                    }));
+
+            }
+
+            return (
+                <div>
+                    <div className="row">
+                        <div className="col-10">
+                            <h2>{ "{{ base_user.username }}" }</h2>
+                            <i className="pl-4">{ "{{ base_user.email }}" }</i>
+                        </div>
+                        { !userLoggedIn &&
+                            <div className="col-2 d-flex align-items-center justify-content-center">
+                            <button onClick={follow} className={`btn btn${state.btnClass}-primary`}>
+                                {state.btnText}
+                            </button>
+                            </div>
+                        }
+                    </div>
+                    <div className="d-flex align-items-center justify-content-end">
+                        <p className="px-4">{ state.followersCount }<i className="text-muted"> followers</i></p>
+                        <p className="px-4">{"{{ base_user.followings.count }}"}<i className="text-muted"> followings</i></p>
+                    </div>
+                </div>
+            );
+        }
+
+        ReactDOM.render(<Dashboard />, document.querySelector("#dashboard"));
+    </script>
+{% if user == base_user %}
+    <div class="container-fluid" id="new-post">
+        <script type="text/babel">
+            
+            function NewPost() {
+
+                const [state, setState] = React.useState({
+                    btnText: 'New Post',
+                    btnClass: 'primary',
+                    showNewPostForm: false
+                });
+
+                function newPostBtn () {
+                    setState(prevState => ({
+                        ...prevState,
+                        btnText: prevState.btnText === 'Close' ? 'New Post' : 'Close',
+                        btnClass: prevState.btnText === 'Close' ? 'primary' : 'danger',
+                        showNewPostForm: prevState.btnText !== 'Close'
+                    }));
+                }
+
+                return (
+                    <div>
+                        <button className={`btn btn-${ state.btnClass } my-2`} onClick={newPostBtn}>{ state.btnText }</button>
+                        { state.showNewPostForm &&
+                        <form action="{% url 'post' %}" className="form-group border p-3" method="post">
+                            <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}" />
+                            <h2>New Post</h2>
+                            <textarea className="form-control mr-5" name="content" rows="5" maxLength="1000" required id="content"></textarea>
+                            <button type="submit" className="btn btn-primary my-3">Post</button>
+                        </form>}
+                    </div>
+                );
+            }
+
+            ReactDOM.render(<NewPost />, document.getElementById('new-post'));
+        </script>
     </div>
-    <div class="d-flex align-items-center justify-content-end">
-        <p class="px-4">{{ base_user.followers|length }} <i class="text-muted">followers</i></p>
-        <p class="px-4">{{ base_user.followings|length }} <i class="text-muted">followings</i></p>
-    </div>
-</div>
-<div>
-    <button class="btn btn-primary my-2" id="post_btn">New Post</button>
-    <form action="{% url 'post' %}" class="form-group border p-3" method="post">
-        {% csrf_token %}
-        <h2>New Post</h2>
-        <textarea class="form-control mr-5" name="content" rows="5" maxlength="1000"
-        required id="content"></textarea>
-        <button type="submit" class="btn btn-primary my-3">Post</button>
-    </form>
-</div>
+{% endif %}
+    
 {% endblock %}
